--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,14 @@
-<p>Welcome <%= @email %>!</p>
+<div style="margin: 0 auto;width: 80%;background-color:#FFF;">
+  <div style="color: #FFF;font-size: 2em;font-weight: bold;background-color: #a05793;padding: 10px 10px 0px 20px;text-align:center;">
+    <%= image_tag(attachments['logo.png'].url) %>
+    &nbsp;
+    <div style="padding-bottom:5px;">Cat Linker</div>
+  </div>
+  <div style="padding:10px;border:3px solid #a05793;text-align:center;font-size:1.5em;">
+    <p><%= t('mailer.hi_there') %> <b><%= @email %></b>!</p>
+    
+    <p><%= t('mailer.confirmation.confirm_your_email_with_link_below') %>:</p>
 
-<p>You can confirm your account email through the link below:</p>
-
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+    <p><%= link_to t('mailer.confirmation.confirm_my_account'), confirmation_url(@resource, confirmation_token: @token), style:"display:inline-block;background-color:#a05793;color:#FFF;padding:15px;border-radius:10px;text-decoration:none" %></p>
+  </div>
+</div>
