--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,12 @@
-<p>Hello <%= @resource.email %>!</p>
+<div style="margin: 0 auto;width: 80%;background-color:#FFF;">
+  <div style="color: #FFF;font-size: 2em;font-weight: bold;background-color: #a05793;padding: 10px 10px 0px 20px;text-align:center;">
+    <%= image_tag(attachments['logo.png'].url) %>
+    &nbsp;
+    <div style="padding-bottom:5px;">Cat Linker</div>
+  </div>
+  <div style="padding:10px;border:3px solid #a05793;text-align:center;font-size:1.5em;">
+    <p><%= t('mailer.hi_there') %>&nbsp;<b><%= @resource.email %></b>!</p>
 
-<p>We're contacting you to notify you that your password has been changed.</p>
+    <p><%= t('mailer.password.notify_password_change') %>.</p>
+  </div>
+</div>
