--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,17 @@
-<p>Hello <%= @resource.email %>!</p>
+<div style="margin: 0 auto;width: 80%;background-color:#FFF;">
+  <div style="color: #FFF;font-size: 2em;font-weight: bold;background-color: #a05793;padding: 10px 10px 0px 20px;text-align:center;">
+    <%= image_tag(attachments['logo.png'].url) %>
+    &nbsp;
+    <div style="padding-bottom:5px;">Cat Linker</div>
+  </div>
+  <div style="padding:10px;border:3px solid #a05793;text-align:center;font-size:1.5em;">
+    <p><%= t('mailer.hi_there') %> <b><%= @resource.email %></b>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+    <p><%= t('mailer.password.someone_requested_password_change') %>:</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+    <p><%= link_to t('mailer.password.change_my_password'), edit_password_url(@resource, reset_password_token: @token), style:"display:inline-block;background-color:#a05793;color:#FFF;padding:15px;border-radius:10px;text-decoration:none" %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+    <p><%= t('mailer.password.not_your_request') %>.</p>
+    <p><%= t('mailer.password.password_wont_change_until_action') %>.</p>
+  </div>
+</div>
