--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,16 @@
-<p>Hello <%= @resource.email %>!</p>
+<div style="margin: 0 auto;width: 80%;background-color:#FFF;">
+  <div style="color: #FFF;font-size: 2em;font-weight: bold;background-color: #a05793;padding: 10px 10px 0px 20px;text-align:center;">
+    <%= image_tag(attachments['logo.png'].url) %>
+    &nbsp;
+    <div style="padding-bottom:5px;">Cat Linker</div>
+  </div>
+  <div style="padding:10px;border:3px solid #a05793;text-align:center;font-size:1.5em;">
+    <p><%= t('mailer.hi_there') %> <b><%= @resource.email %></b>!</p>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+    <p><%= t('mailer.unlock.account_locked') %>.</p>
 
-<p>Click the link below to unlock your account:</p>
+    <p><%= t('mailer.unlock.unlock_account_with_link_below') %>:</p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+    <p><%= link_to t('mailer.unlock.unlock_my_account'), unlock_url(@resource, unlock_token: @token), style:"display:inline-block;background-color:#a05793;color:#FFF;padding:15px;border-radius:10px;text-decoration:none" %></p>
+  </div>
+</div>
