--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,15 +1,17 @@
-<div style="margin: 0 auto;width: 80%;background-color:#FFF;">
-  <div style="color: #FFF;font-size: 2em;font-weight: bold;background-color: #a05793;padding: 10px 10px 0px 20px;text-align:center;">
-    <%= image_tag(attachments['logo.png'].url) %>
+<%= stylesheet_link_tag '/stylesheets/mailers/build_mailer' %> 
+
+<div class="email-container">
+  <div class="email-logo-container">
+    <%= image_tag(attachments['logo.png'].url, style:"height:55px;") %>
     &nbsp;
-    <div style="padding-bottom:5px;">Cat Linker</div>
+    <div class="email-logo-text">Cat Linker</div>
   </div>
-  <div style="padding:10px;border:3px solid #a05793;text-align:center;font-size:1.5em;">
+  <div class="email-body-container">
     <p><%= t('mailer.hi_there') %> <b><%= @resource.email %></b>!</p>
 
     <p><%= t('mailer.password.someone_requested_password_change') %>:</p>
 
-    <p><%= link_to t('mailer.password.change_my_password'), edit_password_url(@resource, reset_password_token: @token), style:"display:inline-block;background-color:#a05793;color:#FFF;padding:15px;border-radius:10px;text-decoration:none" %></p>
+    <p><%= link_to t('mailer.password.change_my_password'), edit_password_url(@resource, reset_password_token: @token), class:"email-button" %></p>
 
     <p><%= t('mailer.password.not_your_request') %>.</p>
     <p><%= t('mailer.password.password_wont_change_until_action') %>.</p>
