--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,16 +1,16 @@
-<div style="margin: 0 auto;width: 80%;background-color:#FFF;">
-  <div style="color: #FFF;font-size: 2em;font-weight: bold;background-color: #a05793;padding: 10px 10px 0px 20px;text-align:center;">
-    <%= image_tag(attachments['logo.png'].url) %>
+<div style="margin: 0 auto;width: 90%;background-color:#FFF;">
+  <div style="color: #FFF;font-size: 1.5em;font-weight: bold;background-color: #a05793;padding: 10px 10px 0px 20px;text-align:center;">
+    <%= image_tag(attachments['logo.png'].url, style:"height:55px;") %>
     &nbsp;
     <div style="padding-bottom:5px;">Cat Linker</div>
   </div>
-  <div style="padding:10px;border:3px solid #a05793;text-align:center;font-size:1.5em;">
+  <div style="padding:10px;border:3px solid #a05793;text-align:center;font-size:1em;">
     <p><%= t('mailer.hi_there') %> <b><%= @resource.email %></b>!</p>
 
     <p><%= t('mailer.unlock.account_locked') %>.</p>
 
     <p><%= t('mailer.unlock.unlock_account_with_link_below') %>:</p>
 
-    <p><%= link_to t('mailer.unlock.unlock_my_account'), unlock_url(@resource, unlock_token: @token), style:"display:inline-block;background-color:#a05793;color:#FFF;padding:15px;border-radius:10px;text-decoration:none" %></p>
+    <p><%= link_to t('mailer.unlock.unlock_my_account'), unlock_url(@resource, unlock_token: @token), style:"display:inline-block;background-color:#a05793;color:#FFF;padding:10px;border-radius:5px;text-decoration:none" %></p>
   </div>
 </div>
