Added email layouts to stylesheet

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -2,7 +2,7 @@
 
 <div class="email-container">
   <div class="email-logo-container">
-    <%= image_tag(attachments['logo.png'].url, style:"height:55px;") %>
+    <%= image_tag(attachments['logo.png'].url, class:"email-logo") %>
     &nbsp;
     <div class="email-logo-text">Cat Linker</div>
   </div>
