--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -2,7 +2,7 @@
   <div>
     <span class="helper-text helper-text-error">
       <% object.errors[field].each do |message| %>
-        <%= message %>
+        <div><%= message %></div>
       <% end %>
     </span>
   </div>
