--- a/app/views/shared/_contact_form.html.erb
+++ b/app/views/shared/_contact_form.html.erb
@@ -6,7 +6,7 @@
 
   <div class="row">
     <div class="col s12 l7">
-      <%= form_with(model: @message, url: messages_path) do |f| %>
+      <%= form_with(model: @message, url: messages_path, multipart: true) do |f| %>
         <%= recaptcha_v3(action: 'contact', turbolinks: true) %>
 
         <div class="row">
@@ -19,6 +19,9 @@
         <% if cat.present? %>
           <%= f.hidden_field :cat_id, value: cat.id %>
         <% end %>
+
+        <%= f.label :nickname %>
+        <%= f.text_field :nickname %>
 
         <div class="row">
           <div class="col s12">
